MiniJava/PA4.java
/* Generated By:JavaCC: Do not edit this line. PA4.java */
import syntaxtree.*;

public class PA4 implements PA4Constants {

  /** Main entry point. */
  public static void main(String args[]) {
    PA4 t = new PA4(System.in);
    try {
      Program n = t.Start();

      System.out.println("\n\nPretty Printing the Abstract Syntax Tree");
      Visitor v1 = new AST_Visitor();  // pretty prints the Abstract Syntax Tree
      n.accept(v1, 0);

      System.out.println("\n\nPretty Print the Program");
      Visitor v2 = new PP_Visitor();  // pretty prints the PA4 program
      String s = (String) n.accept(v2, 0);
      System.out.println(s);

      System.out.println("\n\nGenerating Symbol Table");
      SymbolTableVisitor v3 = new SymbolTableVisitor(); // generates a SymbolTable
      SymbolTable st = v3.symbolTable;
      n.accept(v3,"");
      System.out.println(st);


      System.out.println("\n\nType Checking");
      TypeCheckingVisitor v4 = new TypeCheckingVisitor(st);
      n.accept(v4,"");
      System.out.println(v4.num_errors+" type errors found");

      System.out.println("\n\nDone!");

    } catch (Exception e) {
      System.out.println("Oops.");
      System.out.println(e.getMessage());
      e.printStackTrace();
    }
  }

/* Program Syntax */
  static final public Program Start() throws ParseException {
  Program p;
    p = Program();
    {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

  static final public Program Program() throws ParseException {
  MainClass m;
  ClassDeclList clist;
    m = MainClass();
    clist = ClassDeclList();
    {if (true) return new Program(m, clist);}
    throw new Error("Missing return statement in function");
  }

  static final public MainClass MainClass() throws ParseException {
  Token t;
  Statement s;
    jj_consume_token(CLASS);
    t = jj_consume_token(ID);
    jj_consume_token(LCURLY);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAREN);
    jj_consume_token(STRING);
    jj_consume_token(LBRACKET);
    jj_consume_token(RBRACKET);
    jj_consume_token(ID);
    jj_consume_token(RPAREN);
    jj_consume_token(LCURLY);
    s = Statement();
    jj_consume_token(RCURLY);
    jj_consume_token(RCURLY);
   {if (true) return new MainClass(new Identifier(t.image), s);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDeclList ClassDeclList() throws ParseException {
  ClassDecl c;
  ClassDeclList clist = null;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      c = ClassDecl();
                      clist = new ClassDeclList(c, clist);
    }
   {if (true) return clist;}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDecl ClassDecl() throws ParseException {
  Token t;
  VarDeclList vlist;
  MethodDeclList mlist;
    jj_consume_token(CLASS);
    t = jj_consume_token(ID);
    jj_consume_token(LCURLY);
    vlist = VarDecls();
    mlist = MethodDecls();
    jj_consume_token(RCURLY);
    {if (true) return new ClassDecl(new Identifier(t.image), vlist, mlist);}
    throw new Error("Missing return statement in function");
  }

  static final public VarDeclList VarDecls() throws ParseException {
  VarDeclList vlist = null;
  VarDecl v;
    label_2:
    while (true) {
      if (jj_2_1(4)) {
        ;
      } else {
        break label_2;
      }
      v = VarDecl();
        vlist = new VarDeclList(v,vlist);
    }
     {if (true) return(vlist);}
    throw new Error("Missing return statement in function");
  }

  static final public VarDecl VarDecl() throws ParseException {
  Type ty;
  Token t;
    ty = Type();
    t = jj_consume_token(ID);
    jj_consume_token(SEMICOLON);
   {if (true) return(new VarDecl(ty,new Identifier(t.image)));}
    throw new Error("Missing return statement in function");
  }

  static final public Type Type() throws ParseException {
  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
      jj_consume_token(BOOLEAN);
   {if (true) return new BooleanType();}
      break;
    default:
      jj_la1[1] = jj_gen;
      if (jj_2_2(3)) {
        jj_consume_token(INT);
        jj_consume_token(LBRACKET);
        jj_consume_token(RBRACKET);
   {if (true) return new IntArrayType();}
      } else if (jj_2_3(3)) {
        jj_consume_token(INT);
   {if (true) return new IntegerType();}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          t = jj_consume_token(ID);
   {if (true) return new IdentifierType(t.image);}
          break;
        default:
          jj_la1[2] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public MethodDeclList MethodDecls() throws ParseException {
  MethodDeclList mlist = null;
  MethodDecl m;
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      m = MethodDecl();
        mlist = new MethodDeclList(m,mlist);
    }
   {if (true) return mlist;}
    throw new Error("Missing return statement in function");
  }

  static final public MethodDecl MethodDecl() throws ParseException {
  Type ty;
  Token t;
  FormalList flist;
  VarDeclList vlist;
  StatementList slist;
  Exp e;
    jj_consume_token(PUBLIC);
    ty = Type();
    t = jj_consume_token(ID);
    jj_consume_token(LPAREN);
    flist = FormalList();
    jj_consume_token(RPAREN);
    jj_consume_token(LCURLY);
    vlist = VarDecls();
    slist = Statements();
    jj_consume_token(RETURN);
    e = Exp();
    jj_consume_token(SEMICOLON);
    jj_consume_token(RCURLY);
   {if (true) return new MethodDecl(ty,new Identifier(t.image),flist,vlist,slist,e);}
    throw new Error("Missing return statement in function");
  }

  static final public FormalList FormalList() throws ParseException {
  FormalList flist=null;
  Formal f1,f2;
    f1 = Formal();
                 flist = new FormalList(f1,null);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      jj_consume_token(COMMA);
      f2 = Formal();
     flist = new FormalList(f2,flist);
    }
   {if (true) return flist;}
    throw new Error("Missing return statement in function");
  }

  static final public Formal Formal() throws ParseException {
  Type ty;
  Token t;
    ty = Type();
    t = jj_consume_token(ID);
   {if (true) return new Formal(ty,new Identifier(t.image));}
    throw new Error("Missing return statement in function");
  }

  static final public StatementList Statements() throws ParseException {
  StatementList s_list = null;
  Statement s;
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case PRINTLN:
      case LCURLY:
      case ID:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_5;
      }
      s = Statement();
     s_list = new StatementList(s,s_list);
    }
    {if (true) return s_list;}
    throw new Error("Missing return statement in function");
  }

  static final public Statement Statement() throws ParseException {
  Token t;
  StatementList s_list;
  Exp e1,e2;
  Statement s1,s2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LCURLY:
      jj_consume_token(LCURLY);
      s_list = Statements();
      jj_consume_token(RCURLY);
   {if (true) return(new Block(s_list));}
      break;
    case IF:
      jj_consume_token(IF);
      jj_consume_token(LPAREN);
      e1 = Exp();
      jj_consume_token(RPAREN);
      s1 = Statement();
      jj_consume_token(ELSE);
      s2 = Statement();
   {if (true) return(new If(e1,s1,s2));}
      break;
    case PRINTLN:
      jj_consume_token(PRINTLN);
      jj_consume_token(LPAREN);
      e1 = Exp();
      jj_consume_token(RPAREN);
      jj_consume_token(SEMICOLON);
   {if (true) return(new Print(e1));}
      break;
    default:
      jj_la1[6] = jj_gen;
      if (jj_2_4(2)) {
        t = jj_consume_token(ID);
        jj_consume_token(EQUALS);
        e1 = Exp();
        jj_consume_token(SEMICOLON);
   {if (true) return(new Assign(new Identifier(t.image),e1));}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case WHILE:
          jj_consume_token(WHILE);
          jj_consume_token(LPAREN);
          e1 = Exp();
          jj_consume_token(RPAREN);
          s1 = Statement();
   {if (true) return(new While(e1, s1));}
          break;
        case ID:
          t = jj_consume_token(ID);
          jj_consume_token(LBRACKET);
          e1 = Exp();
          jj_consume_token(RBRACKET);
          jj_consume_token(EQUALS);
          e2 = Exp();
          jj_consume_token(SEMICOLON);
   {if (true) return(new ArrayAssign(new Identifier(t.image), e1, e2));}
          break;
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp Exp() throws ParseException {
 Exp a,b;
    a = Exp4();
    label_6:
    while (true) {
      if (jj_2_5(2)) {
        ;
      } else {
        break label_6;
      }
      jj_consume_token(AND);
      b = Exp4();
                                a = new And(a,b);
    }
   {if (true) return(a);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp Exp4() throws ParseException {
 Exp a,b;
    a = Exp9();
    label_7:
    while (true) {
      if (jj_2_6(2)) {
        ;
      } else {
        break label_7;
      }
      jj_consume_token(LT);
      b = Exp9();
                               a = new LessThan(a,b);
    }
   {if (true) return(a);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp Exp9() throws ParseException {
 Exp a,b;
    a = Exp11();
    label_8:
    while (true) {
      if (jj_2_7(2)) {
        ;
      } else {
        break label_8;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS_OP:
        jj_consume_token(PLUS_OP);
        b = Exp11();
                       a = new Plus(a,b);
        break;
      case MINUS_OP:
        jj_consume_token(MINUS_OP);
        b = Exp11();
                       a = new Minus(a,b);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
   {if (true) return(a);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp Exp11() throws ParseException {
 Exp a,b;
    a = Exp12();
    label_9:
    while (true) {
      if (jj_2_8(2)) {
        ;
      } else {
        break label_9;
      }
      jj_consume_token(TIMES_OP);
      b = Exp12();
     a = new Times(a,b);
    }
   {if (true) return(a);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp Exp12() throws ParseException {
  Exp a, b;
  ExpList c;
  Token t;
    a = Exp14();
    if (jj_2_9(2)) {
      jj_consume_token(DOT);
      jj_consume_token(LENGTH);
                                  {if (true) return new ArrayLength(a);}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOT:
        jj_consume_token(DOT);
        t = jj_consume_token(ID);
        jj_consume_token(LPAREN);
        c = ExpList();
        jj_consume_token(RPAREN);
                                                 {if (true) return new Call(a, new Identifier(t.image), c);}
        break;
      case LBRACKET:
        jj_consume_token(LBRACKET);
        b = Exp();
        jj_consume_token(RBRACKET);
                                    {if (true) return new ArrayLookup(a, b);}
        break;
      default:
        jj_la1[9] = jj_gen;
      {if (true) return a;}
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp Exp14() throws ParseException {
 Exp a,b;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BANG:
      jj_consume_token(BANG);
      a = Exp16();
   {if (true) return new Not(a);}
      break;
    case TRUE:
    case FALSE:
    case THIS:
    case NEW:
    case LPAREN:
    case NUMBER:
    case ID:
      a = Exp16();
   {if (true) return(a);}
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp Exp16() throws ParseException {
 Exp a;
 Token t;
 ExpList c;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUMBER:
      t = jj_consume_token(NUMBER);
              {if (true) return new IntegerLiteral(Integer.parseInt(t.image));}
      break;
    case TRUE:
      jj_consume_token(TRUE);
          {if (true) return new True();}
      break;
    case FALSE:
      jj_consume_token(FALSE);
            {if (true) return new False();}
      break;
    case LPAREN:
      jj_consume_token(LPAREN);
      a = Exp();
      jj_consume_token(RPAREN);
   {if (true) return(new ExpGroup(a));}
      break;
    case THIS:
      jj_consume_token(THIS);
          {if (true) return new This();}
      break;
    default:
      jj_la1[11] = jj_gen;
      if (jj_2_10(2)) {
        jj_consume_token(NEW);
        jj_consume_token(INT);
        jj_consume_token(LBRACKET);
        a = Exp();
        jj_consume_token(RBRACKET);
    {if (true) return new NewArray(a);}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NEW:
          jj_consume_token(NEW);
          t = jj_consume_token(ID);
          jj_consume_token(LPAREN);
          jj_consume_token(RPAREN);
                                  {if (true) return new NewObject(new Identifier(t.image));}
          break;
        case ID:
          t = jj_consume_token(ID);
           {if (true) return new IdentifierExp(t.image);}
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public ExpList ExpList() throws ParseException {
 ExpList a;
 Exp b;
    b = Exp();
           a = new ExpList(null,b);
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_10;
      }
      jj_consume_token(COMMA);
      b = Exp();
                    a=new ExpList(a,b);
    }
   {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_3_9() {
    if (jj_scan_token(DOT)) return true;
    if (jj_scan_token(LENGTH)) return true;
    return false;
  }

  static private boolean jj_3_5() {
    if (jj_scan_token(AND)) return true;
    if (jj_3R_12()) return true;
    return false;
  }

  static private boolean jj_3R_16() {
    if (jj_3R_19()) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3R_31() {
    if (jj_scan_token(ID)) return true;
    return false;
  }

  static private boolean jj_3R_30() {
    if (jj_scan_token(NEW)) return true;
    return false;
  }

  static private boolean jj_3_10() {
    if (jj_scan_token(NEW)) return true;
    if (jj_scan_token(INT)) return true;
    return false;
  }

  static private boolean jj_3R_29() {
    if (jj_scan_token(THIS)) return true;
    return false;
  }

  static private boolean jj_3R_28() {
    if (jj_scan_token(LPAREN)) return true;
    return false;
  }

  static private boolean jj_3_8() {
    if (jj_scan_token(TIMES_OP)) return true;
    if (jj_3R_16()) return true;
    return false;
  }

  static private boolean jj_3_4() {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(EQUALS)) return true;
    return false;
  }

  static private boolean jj_3R_27() {
    if (jj_scan_token(FALSE)) return true;
    return false;
  }

  static private boolean jj_3R_18() {
    if (jj_3R_16()) return true;
    return false;
  }

  static private boolean jj_3R_26() {
    if (jj_scan_token(TRUE)) return true;
    return false;
  }

  static private boolean jj_3R_25() {
    if (jj_scan_token(NUMBER)) return true;
    return false;
  }

  static private boolean jj_3R_24() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_25()) {
    jj_scanpos = xsp;
    if (jj_3R_26()) {
    jj_scanpos = xsp;
    if (jj_3R_27()) {
    jj_scanpos = xsp;
    if (jj_3R_28()) {
    jj_scanpos = xsp;
    if (jj_3R_29()) {
    jj_scanpos = xsp;
    if (jj_3_10()) {
    jj_scanpos = xsp;
    if (jj_3R_30()) {
    jj_scanpos = xsp;
    if (jj_3R_31()) return true;
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_21() {
    if (jj_scan_token(ID)) return true;
    return false;
  }

  static private boolean jj_3R_15() {
    if (jj_scan_token(MINUS_OP)) return true;
    if (jj_3R_18()) return true;
    return false;
  }

  static private boolean jj_3R_14() {
    if (jj_scan_token(PLUS_OP)) return true;
    if (jj_3R_18()) return true;
    return false;
  }

  static private boolean jj_3_3() {
    if (jj_scan_token(INT)) return true;
    return false;
  }

  static private boolean jj_3_7() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_14()) {
    jj_scanpos = xsp;
    if (jj_3R_15()) return true;
    }
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_scan_token(INT)) return true;
    if (jj_scan_token(LBRACKET)) return true;
    if (jj_scan_token(RBRACKET)) return true;
    return false;
  }

  static private boolean jj_3R_23() {
    if (jj_3R_24()) return true;
    return false;
  }

  static private boolean jj_3R_20() {
    if (jj_scan_token(BOOLEAN)) return true;
    return false;
  }

  static private boolean jj_3R_17() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_20()) {
    jj_scanpos = xsp;
    if (jj_3_2()) {
    jj_scanpos = xsp;
    if (jj_3_3()) {
    jj_scanpos = xsp;
    if (jj_3R_21()) return true;
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_13() {
    if (jj_3R_18()) return true;
    return false;
  }

  static private boolean jj_3R_22() {
    if (jj_scan_token(BANG)) return true;
    return false;
  }

  static private boolean jj_3R_19() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_22()) {
    jj_scanpos = xsp;
    if (jj_3R_23()) return true;
    }
    return false;
  }

  static private boolean jj_3_6() {
    if (jj_scan_token(LT)) return true;
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3R_11() {
    if (jj_3R_17()) return true;
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(SEMICOLON)) return true;
    return false;
  }

  static private boolean jj_3R_12() {
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public PA4TokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  /** Whether we are looking ahead. */
  static private boolean jj_lookingAhead = false;
  static private boolean jj_semLA;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[14];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x80,0x8000,0x0,0x20,0x10000000,0x340000,0x240000,0x100000,0x0,0x20000000,0x3830000,0x830000,0x1000000,0x10000000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x1000,0x0,0x0,0x1040,0x40,0x1000,0x300,0x10,0x1804,0x804,0x1000,0x0,};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[10];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;
